--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
 .App {
+  display: flex;
   text-align: center;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background: gray;
+  color: whitesmoke;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  margin: 1em 0 0 0;
+  font-size: 3rem;
+}
+h2 {
+  margin-bottom: 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.radio {
+  max-width: 60em;
+  width: 100%;
+}
+
+.filters {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 2em;
+  font-size: 1.2rem;
+  width: 100%;
+}
+
+span {
+  margin: 0.25em;
+  border: 1px solid pink;
+  border-radius: 10px;
+  padding: 0.25em 0.75em;
+}
+
+.selected {
+  background: violet;
+}
+
+.stations {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  width: 100%;
+}
+
+.station {
+  font-size: 1.2em;
+  border: 1px solid purple;
+  margin: 0.25em;
+  border-radius: 10px;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.stationName {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1em;
+  width: 100%;
+  align-items: center;
+  justify-content: start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.name {
+  width: 100%;
+  text-align: center;
+}
+
+img {
+  display: block;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  border: 2px solid purple;
+  margin: 0 0.25em;
+}
+
+audio {
+  width: 100%;
+}
+
+.rhap_container.player {
+  background: purple;
+  display: flex;
+  justify-items: center;
+  padding: 0.25em 0.75em;
+  border-radius: 10px;
+}
+
+.rhap_stacked .rhap_controls-section {
+  margin-top: 0 !important;
+}
+
+.rhap_controls-section .rhap_volume-controls {
+  justify-content: center;
+}
+
+.rhap_controls-section .rhap_main-controls button[aria-label="Play"] svg path {
+  fill: rgb(235, 235, 235) !important;
+}
+
+.rhap_controls-section .rhap_main-controls button[aria-label="Pause"] svg path {
+  fill: #e36bae !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .stations {
+    grid-template-columns: repeat(1, 100%);
   }
-  to {
-    transform: rotate(360deg);
+
+  img {
+    display: none;
   }
 }
