--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,25 @@
   display: flex;
   text-align: center;
   flex-direction: column;
-}
-
-body{
-  background: gray;
+  background: rgb(128, 128, 128);
   color: whitesmoke;
 }
 
+body{
+  
+  color: whitesmoke;
+  width: clamp(360px, 100%, 700px);
+  box-sizing: border-box;
+  margin: 0em auto;
+  text-align: center;  
+}
+
 h1 {
-  margin: 1em 0 0 0;
+  /*margin: 1em 0 0 0;*/
   font-size: 3rem;
 }
 h2 {
-  margin-bottom: 2em;
-}
+text-align: center;}
 
 .radio {
   max-width: 60em;
@@ -31,26 +36,45 @@ h2 {
   width: 100%;
 }
 
-span {
-  margin: 0.25em;
-  border: 1px solid pink;
-  border-radius: 10px;
-  padding: 0.25em 0.75em;
+/*button {
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  font-size: 25px;
+  background-color: rgb(224, 13, 161);
+  margin-right: 8px;
+  margin-left: 8px;
+}*/
+
+.off {
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  font-size: 25px;
+  background-color: rgb(224, 13, 161);
+  margin-right: 8px;
+  margin-left: 8px;
 }
 
 .selected {
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  font-size: 25px;
+  margin-right: 8px;
+  margin-left: 8px;
   background: violet;
 }
-
+/*
 .stations {
   display: grid;
   grid-template-columns: repeat(3, 33%);
   width: 100%;
 }
-
+*/
 .station {
   font-size: 1.2em;
-  border: 1px solid purple;
+  border: 1px solid rgb(26, 218, 8);
   margin: 0.25em;
   border-radius: 10px;
   padding: 1em;
@@ -63,52 +87,129 @@ span {
 .stationName {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin-bottom: 1em;
-  width: 100%;
+  /*width: 100%;*/
   align-items: center;
-  justify-content: start;
+  font-size: 35px;
 }
 
-.name {
+/*.name {
   width: 100%;
-  text-align: center;
-}
+}*/
 
-img {
-  display: block;
+.logo {
   width: 2.5em;
   height: 2.5em;
   border-radius: 50%;
-  border: 2px solid purple;
-  margin: 0 0.25em;
+  border: 2px solid rgb(23, 221, 247);
+  margin-right: 20px;
 }
 
-audio {
+/*audio {
   width: 100%;
-}
+}*/
 
 .rhap_container.player {
-  background: purple;
-  display: flex;
-  justify-items: center;
+  background: rgb(51, 204, 4);
   padding: 0.25em 0.75em;
-  border-radius: 10px;
+  border-radius: 5px;
+  width: 270px;
 }
 
 .rhap_stacked .rhap_controls-section {
   margin-top: 0 !important;
+  display: flex;
+  flex-direction: row;
 }
 
 .rhap_controls-section .rhap_volume-controls {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
+  margin-left: 90px;
+  width: 270px;
 }
 
 .rhap_controls-section .rhap_main-controls button[aria-label="Play"] svg path {
-  fill: rgb(235, 235, 235) !important;
+  fill: rgb(204, 13, 13) !important;
+  
 }
 
 .rhap_controls-section .rhap_main-controls button[aria-label="Pause"] svg path {
-  fill: #e36bae !important;
+  fill: #856be3 !important;
+  
+}
+
+.artist{
+  width: 350px;
+  height: 250px;
+  border-radius: 5px;
+  border: none;
+}
+
+.support-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.donation {
+  padding-right: 105px;
+  padding-left: 50px;
+  border-right: 6px solid black;
+  align-items: center;
+}
+
+.social-media{
+ margin:10px;
+ width: 45px;
+ height: 45px;
+ margin-left: 15px;
+}
+
+p{
+margin-left: 50px;
+margin-right: 50px;
+font-size: 18px;
+}
+
+.favorite-section {
+  display: flex;
+  margin-bottom: 25px;
+}
+
+.artist-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 100px;
+  align-items: center;
+}
+
+.amount-section {
+  flex-wrap: wrap; 
+}
+
+.amount {
+  width: 160px;
+  height: 60px;
+  margin: 40px;
+  border: none;
+  border-radius: 6px;
+  font-size: 25px;
+}
+
+.payment{
+  width: 160px;
+  height: 60px;
+  margin: 50px;
+  border: none;
+  border-radius: 6px;
+  font-size: 25px;
+}
+
+.icon {
+  padding: 30px;
 }
 
 @media only screen and (max-width: 600px) {
