--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   display: flex;
   text-align: center;
   flex-direction: column;
-  background: rgb(128, 128, 128);
-  color: whitesmoke;
+  background: rgb(133, 163, 146);
+  color: rgb(255, 236, 199);
 }
 
 body{
@@ -31,7 +31,7 @@ text-align: center;}
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 2em;
+  margin-bottom: 1.2em;
   font-size: 1.2rem;
   width: 100%;
 }
@@ -50,20 +50,22 @@ text-align: center;}
   border: none;
   border-radius: 5px;
   width: 100px;
-  font-size: 25px;
-  background-color: rgb(224, 13, 161);
+  font-size: 20px;
+  background-color: rgb(255, 236, 199);
   margin-right: 8px;
   margin-left: 8px;
+  color: rgb(133, 163, 146);
 }
 
 .selected {
   border: none;
   border-radius: 5px;
   width: 100px;
-  font-size: 25px;
+  font-size: 20px;
   margin-right: 8px;
   margin-left: 8px;
-  background: violet;
+  color: rgb(255, 236, 199);
+  background: rgb(245, 185, 113);
 }
 /*
 .stations {
@@ -74,8 +76,9 @@ text-align: center;}
 */
 .station {
   font-size: 1.2em;
-  border: 1px solid rgb(26, 218, 8);
-  margin: 0.25em;
+  /*border: 1px solid rgb(245, 185, 113);*/
+  background: rgb(245, 185, 113);
+  margin: 1.5em;
   border-radius: 10px;
   padding: 1em;
   display: flex;
@@ -91,7 +94,7 @@ text-align: center;}
   margin-bottom: 1em;
   /*width: 100%;*/
   align-items: center;
-  font-size: 35px;
+  font-size: 25px;
 }
 
 /*.name {
@@ -102,7 +105,7 @@ text-align: center;}
   width: 2.5em;
   height: 2.5em;
   border-radius: 50%;
-  border: 2px solid rgb(23, 221, 247);
+  border: 3px solid rgb(255, 236, 199);
   margin-right: 20px;
 }
 
@@ -111,7 +114,7 @@ text-align: center;}
 }*/
 
 .rhap_container.player {
-  background: rgb(51, 204, 4);
+  /*background: rgb(133, 163, 146);*/
   padding: 0.25em 0.75em;
   border-radius: 5px;
   width: 270px;
@@ -132,12 +135,11 @@ text-align: center;}
 }
 
 .rhap_controls-section .rhap_main-controls button[aria-label="Play"] svg path {
-  fill: rgb(204, 13, 13) !important;
-  
+  fill: black !important; 
 }
 
 .rhap_controls-section .rhap_main-controls button[aria-label="Pause"] svg path {
-  fill: #856be3 !important;
+  fill: black !important;
   
 }
 
@@ -146,6 +148,7 @@ text-align: center;}
   height: 250px;
   border-radius: 5px;
   border: none;
+  padding-left: 20px;
 }
 
 .support-section {
@@ -157,7 +160,7 @@ text-align: center;}
 .donation {
   padding-right: 105px;
   padding-left: 50px;
-  border-right: 6px solid black;
+  border-right: 6px solid rgb(245, 185, 113);
   align-items: center;
 }
 
@@ -196,7 +199,9 @@ font-size: 18px;
   margin: 40px;
   border: none;
   border-radius: 6px;
-  font-size: 25px;
+  font-size: 20px;
+  color: rgb(102, 128, 106);
+  background: rgb(255, 236, 199);
 }
 
 .payment{
@@ -206,6 +211,9 @@ font-size: 18px;
   border: none;
   border-radius: 6px;
   font-size: 25px;
+  font-weight: bold;
+  color: rgb(102, 128, 106);
+  background: rgb(255, 236, 199);
 }
 
 .icon {
