--- a/src/App.css
+++ b/src/App.css
@@ -165,16 +165,15 @@ text-align: center;
   justify-content: center;
 }
 
-/*
+
 .donation {
-  padding-right: 105px;
-  padding-left: 50px;
-  border-right: 6px solid rgb(245, 185, 113);
-  align-items: center;
-}*/
+  border: none;
+  border-radius: 6px;
+  background:rgb(133, 163, 146); 
+}
 
 .donation:hover {
-  background-color: #856be3;
+  background-color: rgb(253, 217, 152);
 }
 
 .social-media{
@@ -201,11 +200,13 @@ font-size: 18px;
   height: 40px;
   border: none;
   border-radius: 6px;
-  background-color: pink;
+  background-color: rgb(255, 236, 199);
 }
 
 .add-to-favorites-btn:hover {
-  background-color: #856be3;
+  background-color: rgb(253, 217, 152);
+  border: none;
+  border-radius: 6px;
 }
 
 .artist-info {
